gen/androidmanagement/v1/cargo-errors.log
    Checking google-androidmanagement1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/androidmanagement/v1/lib)
error[E0412]: cannot find type `DeleteWipeDataFlagsItems` in module `crate::resources::enterprises::devices::params`
    --> androidmanagement/v1/lib/src/lib.rs:5750:73
     |
5750 |                     Vec<crate::resources::enterprises::devices::params::DeleteWipeDataFlagsItems>,
     |                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::enterprises::devices::params`

error[E0412]: cannot find type `DeleteWipeDataFlagsItems` in module `crate::resources::enterprises::devices::params`
    --> androidmanagement/v1/lib/src/lib.rs:5768:105
     |
5768 |                     value : impl Into < Vec < crate :: resources :: enterprises :: devices :: params :: DeleteWipeDataFlagsItems > >,
     |                                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::enterprises::devices::params`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
error: Could not compile `google-androidmanagement1`.

To learn more, run the command again with --verbose.
